# here-map-widget-for-jupyter

./: .gitignore  .ort.yml  .readthedocs.yml  CONTRIBUTING.md  MANIFEST.in  README.md  RELEASE.md  map-widget-for-juptyer.json  pyproject.toml  requirements.txt  setup.cfg  setup.py
.github/workflows/: daily_tests.yml  main.yml  release.yml
binder/: environment.yml  postBuild
docs/: requirements.txt
docs/source/: conf.py  contribution.rst  index.rst  installation.rst  prerequisites.rst
docs/source/api_reference/: map.rst
docs/source/api_reference/basemap/: basemap.rst  japan.rst  map_tile.rst  raster.rst  vector.rst
docs/source/api_reference/config/: config.rst
docs/source/api_reference/control/: control.rst  fullscreen.rst  mapsettings.rst  measurement.rst  scalebar.rst  searchcontrol.rst  splitmap.rst  widgetcontrol.rst  zoom.rst  zoomrectangle.rst
docs/source/api_reference/element/: element.rst  infobubble.rst  style.rst
docs/source/api_reference/geometry/: geometry.rst
docs/source/api_reference/layer/: choropleth.rst  geo_json.rst  geodata.rst  heatmap.rst  kml.rst  layer.rst  xyz.rst
docs/source/api_reference/object/: circle.rst  domicon.rst  dommarker.rst  group.rst  icon.rst  marker.rst  object.rst  overlay.rst  polygon.rst  polyline.rst  rectangle.rst
examples/: README.md  countries.geo.json  infobubble.ipynb  japan_example.ipynb  map_basics_demo.ipynb
here_map_widget/: __about__.py  __init__.py  _version.py  configs.py  map.py
js/: .npmignore  .yarnignore  LICENSE  README.md  package.json  webpack.config.js
js/lib/: Map.js  embed.js  extension.js  index.js  jupyter-map.js  labplugin.js  notebook.js
js/lib/control/: Control.js  DistanceMeasurementControl.js  FullscreenControl.js  MapSettingsControl.js  ScaleBar.js  SearchControl.js  SplitMapControl.js  WidgetControl.js  ZoomControl.js  ZoomRectangle.js
js/lib/element/: Element.js  InfoBubble.js  Style.js
js/lib/geometrys/: Geometry.js  LineString.js  MultiLineString.js  MultiPolygon.js  Point.js  Polygon.js  Rect.js  WKT.js
js/lib/layers/: GeoJSON.js  Kml.js  Layer.js  ObjectLayer.js  TileLayer.js
js/lib/objects/: Circle.js  DomIcon.js  DomMarker.js  Group.js  Icon.js  Marker.js  Object.js  Overlay.js  Polygon.js  Polyline.js  Rectangle.js
js/lib/provider/: HeatMap.js  MapTile.js  MarkerCluster.js  OMV.js  Provider.js  XYZ.js
js/lib/service/: DefaultLayers.js  Platform.js  Service.js
